Install node and grunt globally

--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -298,10 +298,11 @@ python:
     packages: {  }
     versions: {  }
 nodejs:
-    install: '0'
+    install: '1'
     settings:
         version: '5'
-    npm_packages: {  }
+    npm_packages:
+        - grunt-cli
 hhvm:
     install: '0'
     nightly: 0
