--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -235,7 +235,7 @@ letsencrypt:
 php:
     install: '1'
     settings:
-        version: '5.5'
+        version: '5.6'
     modules:
         php:
             - cli
@@ -246,6 +246,7 @@ php:
             - gd
             - mbstring
             - imagick
+            - soap
         pear: {  }
         pecl:
             - zip
